# kilojoule

./: .coveragerc  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  kilojoule-imports  requirements.txt  scratch.ipynb  setup.cfg  setup.py  thermoJFM.py  versioneer.py
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst
examples/: kilojoule Intro.ipynb
examples/00 - Thermo I Review/: Ex0.1b Thermal Equilibrium.ipynb  Ex0.2 Compressor Isentropic Efficiency.ipynb
examples/00 - Thermo I Review/.ipynb_checkpoints/: edited-ME321 Ex0.2 Compressor Isentropic Efficiency-checkpoint.ipynb
examples/01 - Chapter 8 Exergy/: Ex8.1 Piston Exergy Analysis.ipynb
examples/01 - Chapter 8 Exergy/.ipynb_checkpoints/: ME321 Ex8.1 Piston Exergy Analysis-checkpoint.ipynb
examples/02 - Chapter 9 Gas Power Cycles/: Ex9.1 Isentropic Compression (Air-Standard).ipynb  Ex9.1 Isentropic Compression (Cold-Air-Standard).ipynb  Ex9.1 Isentropic Compression (Real-Fluid).ipynb  Ex9.2 Otto (Cycle Air-Standard).ipynb  Ex9.2 Otto Cycle (Cold-Air-Standard).ipynb  Ex9.2 Otto Cycle (Real-Fluid).ipynb  Ex9.3 Dual Cycle (Cold-Air-Standard).ipynb  Ex9.4 Brayton Cycle (Air-Standard).ipynb  Ex9.4 Brayton Cycle (Cold-Air-Standard).ipynb  Ex9.4 Brayton Cycle (Real-Fluid).ipynb  Ex9.5 Modified Brayton Cycle (Air-Standard).ipynb  Ex9.5 Modified Brayton Cycle (Cold-Air-Standard).ipynb  Ex9.5 Modified Brayton Cycle (Real-Fluid).ipynb
examples/02 - Chapter 9 Gas Power Cycles/.ipynb_checkpoints/: Ex9.1 Isentropic Compression (Air-Standard)-checkpoint.ipynb  Ex9.1 Isentropic Compression (Cold-Air-Standard)-checkpoint.ipynb  Ex9.1 Isentropic Compression (Real-Fluid)-checkpoint.ipynb  Ex9.2 Otto Cycle (Cold-Air-Standard)-checkpoint.ipynb  Ex9.2 Otto Cycle (Real-Fluid)-checkpoint.ipynb  Ex9.3 Dual Cycle (Cold-Air-Standard)-checkpoint.ipynb  Ex9.4 Brayton Cycle (Air-Standard)-checkpoint.ipynb  Ex9.4 Brayton Cycle (Cold-Air-Standard)-checkpoint.ipynb  (+5 more)
examples/03 - Chapter 10 Vapor Power Cycles/: Ex10.2 Non-Ideal Rankine Cycle.ipynb  Ex10.3 Rankine with Superheat.ipynb  Ex10.4 Rankine with Reheat.ipynb
examples/04 - Chapter 11 Refrigeration Cycles/: Ex11.1 Ideal Refrigeration.ipynb
examples/05 - Chapter 12 Thermodynamic Property Relations/: Ex12.2 - Joule-Thomson Coefficient.ipynb
examples/06 - Chapter 13 Gas Mixtures/: Ex13.1 Mass Fractions.ipynb
examples/07 - Chapter 14 Gas-Vapor Mixtures/: Ex 14.4 Heating with Humidification.ipynb  Ex 14.5 Cooling with Dehumidification.ipynb  Ex 14.6 Adiabatic Mixing.ipynb  Ex 14.7 Comfort Zone.ipynb  Ex14.6 Adiabatic Mixing.ipynb
kilojoule/: __init__.py  constants.py  display.py  export.py  humidair.py  idealgas.py  magics.py  organization.py  plotting.py  realfluid.py  solution_hash.py  units.py
kilojoule/fluids/: __init__.py
kilojoule/properties/: idealgas.py  realfluid.py
kilojoule/schemdraw/: __init__.py
kilojoule/tables/: Bergman.py  Cengel.py  air.py  extract_data.ipynb
kilojoule/templates/: SI.py  SI_C.py  USCS_F.py  USCS_R.py  colab.py  default.py  fluids.py  ht.py  humidair_USCS_F.py  humidair_default.py  kSI.py  kSI_C.py  kSI_K.py
kilojoule/thermo/: __init__.py
src/thermojfm/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
thermojfm/: #plotting.py#  __init__.py  common.py  display.py  fluid.py  humidair.py  idealgas.py  idealgas.py.patch  organization.py  plotting.py  realfluid.py  units.py
thermojfm/templates/: #USCS_F.py#  USCS_F.py  USCS_R.py  default.py  humidair_USCS_F.py  humidair_default.py  kSI_K.py
(+108 files in other folders)
